--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Will you come on a date with me?</h1>
+  <h1>Làm bạn gái tớ nhé.</h1>
   <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif">
   <div class="buttons">
     <button id="no-btn">No</button>
