--- a/confess-crush-main/index.html
+++ b/confess-crush-main/index.html
@@ -6,6 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/img.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -32,9 +33,11 @@
                 <h2 id="title"></h2>
                 <h4 id="desc"></h4>
             </header>
+            <img src="img/cuteCat.jpg" style="margin-right: auto; margin-left: auto; display: block; border-radius: 48%">
             <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
             <button id="no" type="button" class="btn btn-info btn-lg"></button>
         </div>
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -45,12 +48,12 @@
     <script src="./config.js"></script>
     <script src="./js/main.js"></script>
 
-    <script>
-        function loadSound() {
-            var audio = new Audio('sound/sound.mp3');
-            audio.play();
-        }
-    </script>
+<!--    <script>-->
+<!--        function loadSound() {-->
+<!--            var audio = new Audio('sound/sound.mp3');-->
+<!--            audio.play();-->
+<!--        }-->
+<!--    </script>-->
 </body>
 
 </html>
