--- a/confess-crush-main/index.html
+++ b/confess-crush-main/index.html
@@ -33,7 +33,7 @@
                 <h2 id="title"></h2>
                 <h4 id="desc"></h4>
             </header>
-            <img src="img/cuteCat.jpg" style="margin-right: auto; margin-left: auto; display: block; border-radius: 48%">
+            <img src="img/cuteCat.jpg" style="width: 40%; height: 40%; margin-right: auto; margin-left: auto; display: block; border-radius: 48%">
             <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
             <button id="no" type="button" class="btn btn-info btn-lg"></button>
         </div>
