--- a/confess-crush-main/index.html
+++ b/confess-crush-main/index.html
@@ -27,16 +27,26 @@
                 <div class="rect5"></div>
             </div>
         </div>
-        <div id="bg"></div>
+
+<!--        <div id="bg"></div>-->
+        <div id = "bg">
+            <video playsinline autoplay muted loop>
+                <source src="polina.webm" type="video/webm">
+                <source src="sound/video2.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="content">
             <header>
                 <h2 id="title"></h2>
                 <h4 id="desc"></h4>
             </header>
-            <img src="img/cuteCat.jpg" style="width: 40%; height: 40%; margin-right: auto; margin-left: auto; display: block; border-radius: 48%">
+            <img src="img/cute.jpeg" style="width: 40%; height: 40%; margin-right: auto; margin-left: auto;
+             object-fit: cover ;display: block; border-radius: 48%">
             <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
             <button id="no" type="button" class="btn btn-info btn-lg"></button>
         </div>
+
+
 
     </div>
     <!-- Optional JavaScript -->
