--- a/dragon/index.html
+++ b/dragon/index.html
@@ -15,7 +15,7 @@
         <img src="./assets/dino_love1.png" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.png" width="250" alt="Dino Love">
-    <h1>Cho phép tui làm crush của bà đi (^o^)</h1>
+    <h1>Cho phép tui làm crush của bà nhé (^o^)</h1>
     <div class="options">
         <button id="yes">Yes</button>
         <button id="no">No</button>
