--- a/dragon/index.html
+++ b/dragon/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>San Valentin</title>
+    <title>Mai Thế Anh</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
