--- a/dragon/index.html
+++ b/dragon/index.html
@@ -11,7 +11,7 @@
 <body>
 <main>
     <div id="message">
-        <h1>Yêu lắm nha<br>♥</h1>
+        <h1>Tui biết bà đồng ý mà<br>^-^♥</h1>
         <img src="./assets/dino_love1.png" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.png" width="250" alt="Dino Love">
