--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
 <div class="container">
     <h1>Will you come on a date with me?</h1>
-    <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif">
+    <img src="gifMeo.gif" style="border-radius: 50%">
     <div class="buttons">
         <button id="no-btn">No</button>
         <button id="yes-btn"> <a href="heart.html" style="text-decoration: none; color: white">Yes</a></button>
